Fix all paragraph

--- a/index.html
+++ b/index.html
@@ -164,5 +164,28 @@
         <button class="view-all-btn">View all projects</button>
       </div>
     </main>
+    <footer>
+      <div class="contact-section">
+        <h3 id="contact">Contact</h3>
+        <p>Intersted In Working Together With Me?</p>
+        <p>I will design and deploy your website as you wish</p>
+        <hr class="line-up" />
+        <div class="adress">
+          <p>
+            <i class="fa-solid fa-location-dot"></i> Bajak IV Street Medan
+            Amplas, Medan, North Sumatera
+          </p>
+          <div>
+            <a href=""
+              ><img src="images/logo-footer.png" alt="logo footer"
+            /></a>
+          </div>
+          <p><i class="fa-regular fa-envelope"></i> freakinarif25@gmail.com</p>
+          <p><i class="fa-solid fa-phone"></i> +62857-6XXX-XXXX</p>
+        </div>
+        <hr class="line-down" />
+      </div>
+      <p>Copyright © 2022 Arif Setiawan. All right reserved</p>
+    </footer>
   </body>
 </html>
