Create: Footer section in index.html

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <footer>
       <div class="contact-section">
         <h3 id="contact">Contact</h3>
-        <p>Intersted In Working Together With Me?</p>
+        <p class="interested-contact">Intersted In Working Together With Me?</p>
         <p>I will design and deploy your website as you wish</p>
         <hr class="line-up" />
         <div class="adress">
@@ -185,7 +185,9 @@
         </div>
         <hr class="line-down" />
       </div>
-      <p>Copyright © 2022 Arif Setiawan. All right reserved</p>
+      <p style="font-size: 13px">
+        Copyright © 2022 Arif Setiawan. All right reserved
+      </p>
     </footer>
   </body>
 </html>
