Fix: Button in portfolio section

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <button><a href="/">All</a></button>
-            <button><a href="/web-design">Web Design</a></button>
-            <button><a href="/web-development">Web Development</a></button>
-            <button><a href="/ui-design">UI Design</a></button>
+            <a href="/"><button>All</button></a>
+            <a href="/web-design"><button>Web Design</button></a>
+            <a href="/web-development"><button>Web Development</button></a>
+            <a href="/ui-design/"><button>UI Design</button></a>
           </div>
         </div>
         <div class="portfolios">
