--- a/ui-design/index.html
+++ b/ui-design/index.html
@@ -135,7 +135,7 @@
             <a href="/"><button>All</button></a>
             <a href="/web-design"><button>Web Design</button></a>
             <a href="/web-development"><button>Web Development</button></a>
-            <a href="/ui-design/"><button>UI Design</button></a>
+            <a href="/ui-design"><button>UI Design</button></a>
           </div>
         </div>
         <div class="portfolios">
