Refix: All buttons on portfolio section

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <nav>
           <img src="images/logo-header.png" alt="" />
           <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">PORTFOLIO</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="/">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#portfolio">PORTFOLIO</a></li>
+            <li><a href="#contact">CONTACT</a></li>
           </ul>
           <button class="btn-download">
             DOWNLOAD CV <i class="fa-solid fa-download"></i>
@@ -132,10 +132,16 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <a href="/"><button>All</button></a>
-            <a href="/web-design"><button>Web Design</button></a>
-            <a href="/web-development"><button>Web Development</button></a>
-            <a href="/ui-design"><button>UI Design</button></a>
+            <a href="/#portfolio"><button>All</button></a>
+            <a href="/web-design/index.html#portfolio"
+              ><button>Web Design</button></a
+            >
+            <a href="/web-development/index.html#portfolio"
+              ><button>Web Development</button></a
+            >
+            <a href="/ui-design/index.html#portfolio"
+              ><button>UI Design</button></a
+            >
           </div>
         </div>
         <div class="portfolios">
@@ -164,6 +170,9 @@
         <button class="view-all-btn">View all projects</button>
       </div>
     </main>
+
+    <!-- CONTACT SECTION -->
+
     <footer>
       <div class="contact-section">
         <h3 id="contact">Contact</h3>
