--- a/web-design/index.html
+++ b/web-design/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -33,7 +33,7 @@
     <header>
       <div class="hero">
         <nav>
-          <img src="images/logo-header.png" alt="" />
+          <img src="../images/logo-header.png" alt="" />
           <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
@@ -52,7 +52,7 @@
     <main>
       <div class="home-section">
         <div class="profile-home">
-          <img src="images/profile-picture-home.png" alt="Arif Setiawan" />
+          <img src="../images/profile-picture-home.png" alt="Arif Setiawan" />
         </div>
         <div class="text-home">
           <p class="welcome">WELCOME TO MY WEBSITE</p>
@@ -98,7 +98,7 @@
         <div class="about-section">
           <div class="profile-about">
             <img
-              src="images/profile-picture-about.png"
+              src="../images/profile-picture-about.png"
               alt="Arif Setiawan profile picture"
             />
           </div>
@@ -132,23 +132,32 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <a href="/"><button>All</button></a>
-            <a href="/web-design"><button>Web Design</button></a>
-            <a href="/web-development"><button>Web Development</button></a>
-            <a href="/ui-design"><button>UI Design</button></a>
+            <a href="/#portfolio"><button>All</button></a>
+            <a href="/web-design/index.html#portfolio"
+              ><button>Web Design</button></a
+            >
+            <a href="/web-development/index.html#portfolio"
+              ><button>Web Development</button></a
+            >
+            <a href="/ui-design/index.html#portfolio"
+              ><button>UI Design</button></a
+            >
           </div>
         </div>
         <div class="portfolios">
           <div class="akt-news">
             <a href="https://bit.ly/Akt-News" target="_blank"
-              ><img src="images/akt-news.png" alt="Akt News portfolio image" />
+              ><img
+                src="../images/akt-news.png"
+                alt="Akt News portfolio image"
+              />
               <span>Akt. News</span>
             </a>
           </div>
           <div class="lumpath-com">
             <a href="https://bit.ly/Lumpath-com" target="_blank">
               <img
-                src="images/lumpath.com.png"
+                src="../images/lumpath.com.png"
                 alt="lumpath.com portfolio image"
               />
               <span>Lumpath.com</span>
@@ -156,7 +165,7 @@
           </div>
           <div class="mony">
             <a href="https://bit.ly/Mony-app" target="_blank">
-              <img src="images/mony.png" alt="mony portfolio image" />
+              <img src="../images/mony.png" alt="mony portfolio image" />
               <span>Mony</span>
             </a>
           </div>
@@ -177,7 +186,7 @@
           </p>
           <div>
             <a href=""
-              ><img src="images/logo-footer.png" alt="logo footer"
+              ><img src="../images/logo-footer.png" alt="logo footer"
             /></a>
           </div>
           <p><i class="fa-regular fa-envelope"></i> freakinarif25@gmail.com</p>
