Add: Anchor in header-logo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
       <div class="hero">
         <nav>
-          <img src="images/logo-header.png" alt="" />
+          <a href="/"><img src="images/logo-header.png" alt="" /></a>
           <ul>
             <li><a href="/">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
