Rename: Title on index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <meta name="keywords" content="HTML, CSS, & Javascript" />
     <meta name="author" content="Arif Setiawan" />
-    <title>Frarif.com / Personal Website</title>
+    <title>frarif.com - Hello, I'm Arif Setiawan. Know me more...</title>
   </head>
   <body>
     <!-- NAVBAR -->
