--- a/web-design/index.html
+++ b/web-design/index.html
@@ -133,15 +133,11 @@
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
             <a href="/#portfolio"><button>All</button></a>
-            <a href="/web-design/index.html#portfolio"
-              ><button>Web Design</button></a
-            >
-            <a href="/web-development/index.html#portfolio"
+            <a href="/web-design/#portfolio"><button>Web Design</button></a>
+            <a href="/web-development/#portfolio"
               ><button>Web Development</button></a
             >
-            <a href="/ui-design/index.html#portfolio"
-              ><button>UI Design</button></a
-            >
+            <a href="/ui-design/#portfolio"><button>UI Design</button></a>
           </div>
         </div>
         <div class="portfolios">
