Create: Responsive max-width: 100%

--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
             </p>
             <p>
               But in 2021, I really found a new passion that really suited me
-              for so long. I started to focus on UI/UX Design & Front-end
-              Development.
+              for so long. <br />
+              I started to focus on UI/UX Design & Front-end Development.
             </p>
             <p>
               I am very happy to share my passion and insight with people who
-              wants to create an attractive and useful digital product for
-              business purposes and make it easier for users.
+              wants to create <br />
+              an attractive and useful digital product for business purposes and
+              make it easier for users.
             </p>
             <button>DOWNLOAD CV <i class="fa-solid fa-download"></i></button>
           </div>
@@ -176,17 +177,23 @@
         <p>I will design and deploy your website as you wish</p>
         <hr class="line-up" />
         <div class="adress">
-          <p>
-            <i class="fa-solid fa-location-dot"></i> Bajak IV Street Medan
-            Amplas, Medan, North Sumatera
-          </p>
-          <div>
+          <div class="my-address">
+            <p>
+              <i class="fa-solid fa-location-dot"></i> Bajak IV Street Medan
+              Amplas, Medan, North Sumatera
+            </p>
+          </div>
+          <div class="logo-header">
             <a href=""
               ><img src="images/logo-footer.png" alt="logo footer"
             /></a>
           </div>
-          <p><i class="fa-regular fa-envelope"></i> freakinarif25@gmail.com</p>
-          <p><i class="fa-solid fa-phone"></i> +62857-6XXX-XXXX</p>
+          <div class="email-phone">
+            <p>
+              <i class="fa-regular fa-envelope"></i> freakinarif25@gmail.com
+            </p>
+            <p><i class="fa-solid fa-phone"></i> +62857-6XXX-XXXX</p>
+          </div>
         </div>
         <hr class="line-down" />
       </div>
