--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               an attractive and useful digital product for business purposes and
               make it easier for users.
             </p>
-            <button>DOWNLOAD CV <i class="fa-solid fa-download"></i></button>
+            <a href="/" class="know-me">Know me more...</a>
           </div>
         </div>
       </div>
