Create: Responsive for mobile screen

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li><a href="#portfolio">PORTFOLIO</a></li>
             <li><a href="#contact">CONTACT</a></li>
           </ul>
+          <div class="responsive-mobile">
+            <p><i class="fa-solid fa-bars"></i></p>
+          </div>
           <button class="btn-download">
             DOWNLOAD CV <i class="fa-solid fa-download"></i>
           </button>
@@ -174,7 +177,9 @@
       <div class="contact-section">
         <h3 id="contact">Contact</h3>
         <p class="interested-contact">Intersted In Working Together With Me?</p>
-        <p>I will design and deploy your website as you wish</p>
+        <p class="description-contact">
+          I will design and deploy your website as you wish
+        </p>
         <hr class="line-up" />
         <div class="adress">
           <div class="my-address">
