Create: Profile page in index.html

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               an attractive and useful digital product for business purposes and
               make it easier for users.
             </p>
-            <a href="/" class="know-me">Know me more...</a>
+            <a href="profile.html" class="know-me">Know me more...</a>
           </div>
         </div>
       </div>
