--- a/web-design/index.html
+++ b/web-design/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -120,7 +120,7 @@
               wants to create an attractive and useful digital product for
               business purposes and make it easier for users.
             </p>
-            <button>DOWNLOAD CV <i class="fa-solid fa-download"></i></button>
+            <a href="../profile.html" class="know-me">Know me more...</a>
           </div>
         </div>
       </div>
