Create: Link in button download

--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
           <div class="responsive-mobile">
             <p><i class="fa-solid fa-bars"></i></p>
           </div>
-          <button class="btn-download">
-            DOWNLOAD CV <i class="fa-solid fa-download"></i>
-          </button>
+          <a
+            href="https://drive.google.com/file/d/1Ntuaw105SmAlV_AxuX3tV_7IWMMhIS1E/view?usp=share_link"
+            target="_blank"
+          >
+            <button class="btn-download">
+              DOWNLOAD CV <i class="fa-solid fa-download"></i></button
+          ></a>
         </nav>
       </div>
     </header>
@@ -89,9 +93,14 @@
             ></a>
           </p>
           <div>
-            <button class="btn-hire-me">
-              HIRE ME <i class="fa-solid fa-arrow-right-from-bracket"></i>
-            </button>
+            <a
+              href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"
+              target="_blank"
+            >
+              <button class="btn-hire-me">
+                HIRE ME
+                <i class="fa-solid fa-arrow-right-from-bracket"></i></button
+            ></a>
           </div>
         </div>
       </div>
