Refix: Button in portfolio section index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav>
           <a href="/"><img src="images/logo-header.png" alt="" /></a>
           <ul>
-            <li><a href="/">HOME</a></li>
+            <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
             <li><a href="#contact">CONTACT</a></li>
@@ -57,7 +57,7 @@
     <!-- HOME SECTION -->
 
     <main>
-      <div class="home-section">
+      <div class="home-section" id="home">
         <div class="profile-home">
           <img src="images/profile-picture-home.png" alt="Arif Setiawan" />
         </div>
