--- a/web-design/index.html
+++ b/web-design/index.html
@@ -132,12 +132,11 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <a href="/#portfolio"><button>All</button></a>
-            <a href="/web-design/#portfolio"><button>Web Design</button></a>
+            <a href="/web-design/#portfolio"><button>UI Design</button></a>
             <a href="/web-development/#portfolio"
-              ><button>Web Development</button></a
+              ><button>UI/UX Design</button></a
             >
-            <a href="/ui-design/#portfolio"><button>UI Design</button></a>
+            <a href="/ui-design/#portfolio"><button>Web Development</button></a>
           </div>
         </div>
         <div class="portfolios">
