Add: Icon in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <meta name="keywords" content="HTML, CSS, & Javascript" />
     <meta name="author" content="Arif Setiawan" />
-    <link rel="icon" type="image/x-icon" href="/images/logo-header.ico" />
+    <link rel="icon" type="image/x-icon" href="images/logo-header.ico" />
     <title>frarif.com - Hello, I'm Arif Setiawan. Know me more...</title>
   </head>
   <body>
