Refix: Footer in style.css

--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
             <li><a href="/">HOME</a></li>
             <li><a href="../#about">ABOUT</a></li>
             <li><a href="../#portfolio">PORTFOLIO</a></li>
-            <li><a href="../#contact">CONTACT</a></li>
+            <li><a href="#contact">CONTACT</a></li>
           </ul>
           <div class="responsive-mobile">
             <p><i class="fa-solid fa-bars"></i></p>
