Refix: Button portfolio section in index.html

--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <a href="/web-design/#portfolio"><button>UI Design</button></a>
+            <a href="/ui-design/#portfolio"><button>UI Design</button></a>
+            <a href="/ui-ux-design/#portfolio"><button>UI/UX Design</button></a>
             <a href="/web-development/#portfolio"
-              ><button>UI/UX Design</button></a
+              ><button>Web Development</button></a
             >
-            <a href="/ui-design/#portfolio"><button>Web Development</button></a>
           </div>
         </div>
         <div class="portfolios">
