--- a/web-development/index.html
+++ b/web-development/index.html
@@ -168,24 +168,35 @@
         <button class="view-all-btn">View all projects</button>
       </div>
     </main>
+
+    <!-- CONTACT SECTION -->
+
     <footer>
       <div class="contact-section">
         <h3 id="contact">Contact</h3>
         <p class="interested-contact">Intersted In Working Together With Me?</p>
-        <p>I will design and deploy your website as you wish</p>
+        <p class="description-contact">
+          I will design and deploy your website as you wish
+        </p>
         <hr class="line-up" />
         <div class="adress">
-          <p>
-            <i class="fa-solid fa-location-dot"></i> Bajak IV Street Medan
-            Amplas, Medan, North Sumatera
-          </p>
-          <div>
+          <div class="my-address">
+            <p>
+              <i class="fa-solid fa-location-dot"></i> Bajak IV Street Medan
+              Amplas, Medan, North Sumatera
+            </p>
+          </div>
+          <div class="logo-header">
             <a href=""
               ><img src="../images/logo-footer.png" alt="logo footer"
             /></a>
           </div>
-          <p><i class="fa-regular fa-envelope"></i> freakinarif25@gmail.com</p>
-          <p><i class="fa-solid fa-phone"></i> +62857-6XXX-XXXX</p>
+          <div class="email-phone">
+            <p>
+              <i class="fa-regular fa-envelope"></i> freakinarif25@gmail.com
+            </p>
+            <p><i class="fa-solid fa-phone"></i> +62857-6XXX-XXXX</p>
+          </div>
         </div>
         <hr class="line-down" />
       </div>
