Refix: Button portfolio section index.html

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <a href="/ui-design/#portfolio"><button>UI Design</button></a>
-            <a href="/ui-ux-design/#portfolio"><button>UI/UX Design</button></a>
+            <a href="/ui-design/#portfolio"><button>UI DESIGN</button></a>
+            <a href="/ui-ux-design/#portfolio"><button>UI/UX DESIGN</button></a>
             <a href="/web-development/#portfolio"
-              ><button>Web Development</button></a
+              ><button>WEB DEVELOPMENT</button></a
             >
           </div>
         </div>
