--- a/ui-ux-design/index.html
+++ b/ui-ux-design/index.html
@@ -35,10 +35,10 @@
         <nav>
           <a href="../"><img src="../images/logo-header.png" alt="" /></a>
           <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">PORTFOLIO</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#portfolio">PORTFOLIO</a></li>
+            <li><a href="#contact">CONTACT</a></li>
           </ul>
           <button class="btn-download">
             DOWNLOAD CV <i class="fa-solid fa-download"></i>
