--- a/web-development/index.html
+++ b/web-development/index.html
@@ -50,7 +50,7 @@
     <!-- HOME SECTION -->
 
     <main>
-      <div class="home-section">
+      <div class="home-section" id="home">
         <div class="profile-home">
           <img src="../images/profile-picture-home.png" alt="Arif Setiawan" />
         </div>
@@ -94,7 +94,7 @@
       </div>
 
       <!-- ABOUT SECTION -->
-      <div class="about">
+      <div class="about" id="about">
         <div class="about-section">
           <div class="profile-about">
             <img
