--- a/ui-ux-design/index.html
+++ b/ui-ux-design/index.html
@@ -25,6 +25,7 @@
     />
     <meta name="keywords" content="HTML, CSS, & Javascript" />
     <meta name="author" content="Arif Setiawan" />
+    <link rel="icon" type="image/x-icon" href="../images/title-icon.ico" />
     <title>Frarif.com / Personal Website</title>
   </head>
   <body>
