Create: Portfolio page (project.html)

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
             </a>
           </div>
         </div>
-        <button class="view-all-btn">View all projects</button>
+        <a href="project.html"
+          ><button class="view-all-btn">View all projects</button></a
+        >
       </div>
     </main>
 
