--- a/web-development/index.html
+++ b/web-development/index.html
@@ -166,7 +166,9 @@
             </a>
           </div>
         </div>
-        <button class="view-all-btn">View all projects</button>
+        <a href="project.html"
+          ><button class="view-all-btn">View all projects</button></a
+        >
       </div>
     </main>
 
