Recreate: project page

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </a>
           </div>
         </div>
-        <a href="project.html"
+        <a href="project-page/project.html"
           ><button class="view-all-btn">View all projects</button></a
         >
       </div>
