--- a/project-page/project.html
+++ b/project-page/project.html
@@ -14,8 +14,8 @@
     />
 
     <!-- My CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style-project.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style-project.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,7 +34,7 @@
     <header>
       <div class="hero">
         <nav>
-          <a href="/"><img src="images/logo-header.png" alt="" /></a>
+          <a href="/"><img src="../images/logo-header.png" alt="" /></a>
           <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
@@ -71,7 +71,7 @@
       <div class="project-show">
         <div class="project-card">
           <a href="https://bit.ly/Lumpath-com" target="_blank">
-            <img src="images/lumpath.com.png" alt="Lumpath.com"
+            <img src="../images/lumpath.com.png" alt="Lumpath.com"
           /></a>
           <p>
             Lumpath.com is a travel planning website that makes it easy for
@@ -81,7 +81,7 @@
         </div>
         <div class="project-card">
           <a href="https://bit.ly/Akt-News" target="_blank">
-            <img src="images/akt-news.png" alt="Akt-News"
+            <img src="../images/akt-news.png" alt="Akt-News"
           /></a>
           <p>
             Akt. News is a news portal application that contains news that is
@@ -91,7 +91,7 @@
         </div>
         <div class="project-card">
           <a href="https://bit.ly/Mony-app" target="">
-            <img src="images/mony.png" alt="Mony"
+            <img src="../images/mony.png" alt="Mony"
           /></a>
           <p>
             Mony is a payment application that makes it easy for users to make
@@ -120,7 +120,7 @@
           </div>
           <div class="logo-header">
             <a href=""
-              ><img src="images/logo-footer.png" alt="logo footer"
+              ><img src="../images/logo-footer.png" alt="logo footer"
             /></a>
           </div>
           <div class="email-phone">
