Create: home-page folder

--- a/index.html
+++ b/index.html
@@ -146,9 +146,13 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <a href="/ui-design/#portfolio"><button>UI DESIGN</button></a>
-            <a href="/ui-ux-design/#portfolio"><button>UI/UX DESIGN</button></a>
-            <a href="/web-development/#portfolio"
+            <a href="home-page/ui-design.html#portfolio"
+              ><button>UI DESIGN</button></a
+            >
+            <a href="home-page/ui-ux-design.html#portfolio"
+              ><button>UI/UX DESIGN</button></a
+            >
+            <a href="home-page/web-development.html#portfolio"
               ><button>WEB DEVELOPMENT</button></a
             >
           </div>
