--- a/home-page/web-development.html
+++ b/home-page/web-development.html
@@ -25,8 +25,8 @@
     />
     <meta name="keywords" content="HTML, CSS, & Javascript" />
     <meta name="author" content="Arif Setiawan" />
-    <link rel="icon" type="image/x-icon" href="../images/title-icon.ico" />
-    <title>Frarif.com / Personal Website</title>
+    <link rel="icon" type="image/x-icon" href="images/title-icon.ico" />
+    <title>frarif.com - Hello, I'm Arif Setiawan. Know me more...</title>
   </head>
   <body>
     <!-- NAVBAR -->
@@ -34,16 +34,23 @@
     <header>
       <div class="hero">
         <nav>
-          <a href="../"><img src="../images/logo-header.png" alt="" /></a>
+          <a href="/"><img src="../images/logo-header.png" alt="" /></a>
           <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#portfolio">PORTFOLIO</a></li>
             <li><a href="#contact">CONTACT</a></li>
           </ul>
-          <button class="btn-download">
-            DOWNLOAD CV <i class="fa-solid fa-download"></i>
-          </button>
+          <div class="responsive-mobile">
+            <p><i class="fa-solid fa-bars"></i></p>
+          </div>
+          <a
+            href="https://drive.google.com/file/d/1Ntuaw105SmAlV_AxuX3tV_7IWMMhIS1E/view?usp=share_link"
+            target="_blank"
+          >
+            <button class="btn-download">
+              DOWNLOAD CV <i class="fa-solid fa-download"></i></button
+          ></a>
         </nav>
       </div>
     </header>
@@ -87,15 +94,20 @@
             ></a>
           </p>
           <div>
-            <button class="btn-hire-me">
-              HIRE ME <i class="fa-solid fa-arrow-right-from-bracket"></i>
-            </button>
+            <a
+              href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"
+              target="_blank"
+            >
+              <button class="btn-hire-me">
+                HIRE ME
+                <i class="fa-solid fa-arrow-right-from-bracket"></i></button
+            ></a>
           </div>
         </div>
       </div>
 
       <!-- ABOUT SECTION -->
-      <div class="about" id="about">
+      <div class="about">
         <div class="about-section">
           <div class="profile-about">
             <img
@@ -113,15 +125,16 @@
             </p>
             <p>
               But in 2021, I really found a new passion that really suited me
-              for so long. I started to focus on UI/UX Design & Front-end
-              Development.
+              for so long. <br />
+              I started to focus on UI/UX Design & Front-end Development.
             </p>
             <p>
               I am very happy to share my passion and insight with people who
-              wants to create an attractive and useful digital product for
-              business purposes and make it easier for users.
+              wants to create <br />
+              an attractive and useful digital product for business purposes and
+              make it easier for users.
             </p>
-            <a href="../profile.html" class="know-me">Know me more...</a>
+            <a href="profile.html" class="know-me">Know me more...</a>
           </div>
         </div>
       </div>
@@ -133,9 +146,11 @@
         <div class="portfolio-text">
           <p>Below is some result what I've done:</p>
           <div class="portfolio-button">
-            <a href="/ui-design/#portfolio"><button>UI DESIGN</button></a>
-            <a href="/ui-ux-design/#portfolio"><button>UI/UX DESIGN</button></a>
-            <a href="/web-development/#portfolio"
+            <a href="ui-design.html#portfolio"><button>UI DESIGN</button></a>
+            <a href="ui-ux-design.html#portfolio"
+              ><button>UI/UX DESIGN</button></a
+            >
+            <a href="web-development.html#portfolio"
               ><button>WEB DEVELOPMENT</button></a
             >
           </div>
@@ -166,7 +181,7 @@
             </a>
           </div>
         </div>
-        <a href="project.html"
+        <a href="../project-page/project.html"
           ><button class="view-all-btn">View all projects</button></a
         >
       </div>
