Create: Web development portfolio

--- a/home-page/web-development.html
+++ b/home-page/web-development.html
@@ -157,27 +157,12 @@
         </div>
         <div class="portfolios">
           <div class="akt-news">
-            <a href="https://bit.ly/Akt-News" target="_blank"
+            <a href="https://kreatim.frarif.com/" target="_blank"
               ><img
-                src="../images/akt-news.png"
-                alt="Akt News portfolio image"
+                src="../images/kreatim.png"
+                alt="Kreatim-Web-Development-Image"
               />
-              <span>Akt. News</span>
-            </a>
-          </div>
-          <div class="lumpath-com">
-            <a href="https://bit.ly/Lumpath-com" target="_blank">
-              <img
-                src="../images/lumpath.com.png"
-                alt="lumpath.com portfolio image"
-              />
-              <span>Lumpath.com</span>
-            </a>
-          </div>
-          <div class="mony">
-            <a href="https://bit.ly/Mony-app" target="_blank">
-              <img src="../images/mony.png" alt="mony portfolio image" />
-              <span>Mony</span>
+              <span>Kreatim</span>
             </a>
           </div>
         </div>
