--- a/home-page/ui-design.html
+++ b/home-page/ui-design.html
@@ -157,26 +157,34 @@
         </div>
         <div class="portfolios">
           <div class="akt-news">
-            <a href="https://bit.ly/Akt-News" target="_blank"
+            <a
+              href="https://drive.google.com/file/d/1uAHgj-TePO4MKESTXPJ2RjG4K66h24l4/view?usp=sharing"
+              target="_blank"
               ><img
                 src="../images/akt-news.png"
-                alt="Akt News portfolio image"
+                alt="Akt-News-UI-Design-Image"
               />
               <span>Akt. News</span>
             </a>
           </div>
           <div class="lumpath-com">
-            <a href="https://bit.ly/Lumpath-com" target="_blank">
+            <a
+              href="https://drive.google.com/file/d/1PAtCwHmbaAMLzFXISzOS0nvw1BKhdlyL/view?usp=sharing"
+              target="_blank"
+            >
               <img
                 src="../images/lumpath.com.png"
-                alt="lumpath.com portfolio image"
+                alt="Lumpath.com-UI-Design-image"
               />
               <span>Lumpath.com</span>
             </a>
           </div>
           <div class="mony">
-            <a href="https://bit.ly/Mony-app" target="_blank">
-              <img src="../images/mony.png" alt="mony portfolio image" />
+            <a
+              href="https://drive.google.com/file/d/1N1ufdxBAj43LNE5qSPGe1Ry3YUP2Rg0-/view?usp=sharing"
+              target="_blank"
+            >
+              <img src="../images/mony.png" alt="Mony-UI-Design-Image" />
               <span>Mony</span>
             </a>
           </div>
