Add: new images

--- a/project-page/ui-design-project.html
+++ b/project-page/ui-design-project.html
@@ -70,33 +70,33 @@
       </div>
       <div class="project-show">
         <div class="project-card">
-          <a href="https://bit.ly/Lumpath-com" target="_blank">
-            <img src="../images/lumpath.com.png" alt="Lumpath.com"
+          <a
+            href="https://drive.google.com/file/d/1PAtCwHmbaAMLzFXISzOS0nvw1BKhdlyL/view?usp=sharing"
+            target="_blank"
+          >
+            <img
+              src="../images/lumpath.com.png"
+              alt="Lumpath.com-UI-Design-image"
           /></a>
-          <p>
-            Lumpath.com is a travel planning website that makes it easy for
-            travelers to make travel plans to make it easier if they want to
-            visit a city, country, and others
-          </p>
+          <p>Lumpath.com</p>
         </div>
         <div class="project-card">
-          <a href="https://bit.ly/Akt-News" target="_blank">
-            <img src="../images/akt-news.png" alt="Akt-News"
+          <a
+            href="https://drive.google.com/file/d/1uAHgj-TePO4MKESTXPJ2RjG4K66h24l4/view?usp=sharing"
+            target="_blank"
+          >
+            <img src="../images/akt-news.png" alt="Akt-News-UI-Design-Image"
           /></a>
-          <p>
-            Akt. News is a news portal application that contains news that is
-            currently trending. Which makes it easier for users to find the news
-            they need.
-          </p>
+          <p>Akt. News</p>
         </div>
         <div class="project-card">
-          <a href="https://bit.ly/Mony-app" target="">
-            <img src="../images/mony.png" alt="Mony"
+          <a
+            href="https://drive.google.com/file/d/1N1ufdxBAj43LNE5qSPGe1Ry3YUP2Rg0-/view?usp=sharing"
+            target="_blank"
+          >
+            <img src="../images/mony.png" alt="Mony-UI-Design-Image"
           /></a>
-          <p>
-            Mony is a payment application that makes it easy for users to make
-            payments anytime and anywhere.
-          </p>
+          <p>Mony</p>
         </div>
       </div>
     </div>
