Add: Project in Project Page

--- a/project-page/ui-design-project.html
+++ b/project-page/ui-design-project.html
@@ -98,6 +98,66 @@
           /></a>
           <p>Mony</p>
         </div>
+        <div class="project-card">
+          <a
+            href="https://drive.google.com/file/d/1PLUQcUZAdKSUexmyoP4TWfVqQDfYHqZ8/view?usp=sharing"
+            target="_blank"
+          >
+            <img src="../images/analytic.png" alt="Analytic-UI-Design-Image"
+          /></a>
+          <p>Analytic</p>
+        </div>
+        <div class="project-card">
+          <a
+            href="https://drive.google.com/file/d/1cJL-5OPrkAukZUsoVJYVnujR0vebMUAb/view?usp=sharing"
+            target="_blank"
+          >
+            <img
+              src="../images/boarding-pass.png"
+              alt="Boarding-Pass-UI-Design-Image"
+          /></a>
+          <p>Boarding Pass</p>
+        </div>
+        <div class="project-card">
+          <a
+            href="https://drive.google.com/file/d/1br6Y4pBxocQ4gWl4HPwIFl0LZK8gCT_r/view?usp=sharing"
+            target="_blank"
+          >
+            <img
+              src="../images/calculator.png"
+              alt="Calculator-UI-Design-Image"
+          /></a>
+          <p>Calculator</p>
+        </div>
+        <div class="project-card">
+          <a
+            href="https://drive.google.com/file/d/13P5g-t-_NFTih3-md5ufL7En43B6sl-V/view?usp=sharing"
+            target="_blank"
+          >
+            <img src="../images/checkout.png" alt="Checkout-UI-Design-Image"
+          /></a>
+          <p>Checkout</p>
+        </div>
+        <div class="project-card">
+          <a
+            href="https://drive.google.com/file/d/1yLiczynkA15BoOBrtU4V9T89lwc3JrpK/view?usp=sharing"
+            target="_blank"
+          >
+            <img src="../images/countdown.png" alt="Countdown-UI-Design-Image"
+          /></a>
+          <p>Countdown</p>
+        </div>
+        <div class="project-card">
+          <a
+            href="https://drive.google.com/file/d/1r2ijfC9Juf4M2z0zOiok8VYkprmWNxjw/view?usp=sharing"
+            target="_blank"
+          >
+            <img
+              src="../images/e-commerce.png"
+              alt="E-commerce-UI-Design-Image"
+          /></a>
+          <p>E-commerce</p>
+        </div>
       </div>
     </div>
 
