--- a/project-page/web-development-project.html
+++ b/project-page/web-development-project.html
@@ -70,33 +70,10 @@
       </div>
       <div class="project-show">
         <div class="project-card">
-          <a href="https://bit.ly/Lumpath-com" target="_blank">
-            <img src="../images/lumpath.com.png" alt="Lumpath.com"
+          <a href="https://kreatim.frarif.com/" target="_blank">
+            <img src="../images/kreatim.png" alt="Kreatim-Company-Website"
           /></a>
-          <p>
-            Lumpath.com is a travel planning website that makes it easy for
-            travelers to make travel plans to make it easier if they want to
-            visit a city, country, and others
-          </p>
-        </div>
-        <div class="project-card">
-          <a href="https://bit.ly/Akt-News" target="_blank">
-            <img src="../images/akt-news.png" alt="Akt-News"
-          /></a>
-          <p>
-            Akt. News is a news portal application that contains news that is
-            currently trending. Which makes it easier for users to find the news
-            they need.
-          </p>
-        </div>
-        <div class="project-card">
-          <a href="https://bit.ly/Mony-app" target="">
-            <img src="../images/mony.png" alt="Mony"
-          /></a>
-          <p>
-            Mony is a payment application that makes it easy for users to make
-            payments anytime and anywhere.
-          </p>
+          <p>Kreatim</p>
         </div>
       </div>
     </div>
