Create: Hire page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             target="_blank"
           >
             <button class="btn-download">
-              DOWNLOAD CV <i class="fa-solid fa-download"></i></button
+              DOWNLOAD CV&nbsp;&nbsp;<i
+                class="fa-solid fa-download"
+              ></i></button
           ></a>
         </nav>
       </div>
@@ -94,12 +96,9 @@
             ></a>
           </p>
           <div>
-            <a
-              href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"
-              target="_blank"
-            >
+            <a href="hire-me.html">
               <button class="btn-hire-me">
-                HIRE ME
+                HIRE ME&nbsp;
                 <i class="fa-solid fa-arrow-right-from-bracket"></i></button
             ></a>
           </div>
