--- a/profile.html
+++ b/profile.html
@@ -128,10 +128,7 @@
           </div>
         </div>
         <div>
-          <a
-            href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=new"
-            target="_blank"
-          >
+          <a href="hire-me.html">
             <button class="btn-hire-me">
               HIRE ME
               <i class="fa-solid fa-arrow-right-from-bracket"></i></button
