--- a/project-page/ui-design-project.html
+++ b/project-page/ui-design-project.html
@@ -34,23 +34,33 @@
     <header>
       <div class="hero">
         <nav>
-          <a href="/"><img src="../images/logo-header.png" alt="" /></a>
-          <ul>
-            <li><a href="/">HOME</a></li>
-            <li><a href="../index.html#about">ABOUT</a></li>
-            <li><a href="../index.html#portfolio">PORTFOLIO</a></li>
-            <li><a href="#contact">CONTACT</a></li>
-          </ul>
-          <div class="responsive-mobile">
-            <p><i class="fa-solid fa-bars"></i></p>
+          <div class="header-logo">
+            <a href="/"><img src="images/logo-header.png" alt="" /></a>
           </div>
-          <a
-            href="https://drive.google.com/file/d/1Ntuaw105SmAlV_AxuX3tV_7IWMMhIS1E/view?usp=share_link"
-            target="_blank"
-          >
-            <button class="btn-download">
-              DOWNLOAD CV <i class="fa-solid fa-download"></i></button
-          ></a>
+          <div class="navbar-list-btn">
+            <div class="navbar-list">
+              <ul>
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+              </ul>
+            </div>
+            <div class="responsive-mobile">
+              <p><i class="fa-solid fa-bars"></i></p>
+            </div>
+            <div class="btn-download">
+              <a
+                href="https://drive.google.com/file/d/1Ntuaw105SmAlV_AxuX3tV_7IWMMhIS1E/view?usp=share_link"
+                target="_blank"
+              >
+                <button>
+                  DOWNLOAD CV&nbsp;&nbsp;<i
+                    class="fa-solid fa-download"
+                  ></i></button
+              ></a>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
